--- a/src/app/pages/home/home/home.component.html
+++ b/src/app/pages/home/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<div class="container">
+  <p>Template Driven forms</p>
+  <app-template-driven-forms/>
+  <hr/>
+  <p>Reative forms</p>
+  <app-reative-forms/>
+</div>
+
